--- a/css/Style.css
+++ b/css/Style.css
@@ -507,6 +507,13 @@
     flex-wrap: wrap;
     width: 1236px;
   }
+
+  .room {
+    display: flex;
+    flex-direction: column;
+    width: 392px;
+    font-family: Yeseva One;
+  }
   
   .room ul li {
     list-style-position: inside;
@@ -525,7 +532,7 @@
     margin-left: 31px;
     background-color: white;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
-    position: absolute;
+    z-index: 1;
   }
   
   .rooms-text h2 {
@@ -571,7 +578,6 @@
   
   .page4 {
     width: 100%;
-    margin-top: 300px;
     display: flex;
     margin-left: -80px;
   }
@@ -1180,3 +1186,29 @@
   .own_checkbox:focus + .custom_checkbox {
     box-shadow: 0 0 0 0.1em #000, 0 0 0 0.2 #e3b873;
   }
+
+
+  .title {
+    margin: 0;
+    font-family: Yeseva One, "Times New Roman", Times, serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 53px;
+    text-transform: uppercase;
+    color: #fff;
+  }
+  .circle {
+    background: #e3b873;
+    border: 8px solid #ffffff;
+    box-shadow: 0px 5px 15px rgb(227 184 115 / 15%);
+    border-radius: 50%;
+    font-size: 18px;
+    line-height: 25px;
+    width: 55px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 13px;
+}
